--- a/site/index.html
+++ b/site/index.html
@@ -58,6 +58,7 @@
     </header>
     <main id="home">
 			<div id="head-img">
+			<span>Smart Text Editor</span>
 			</div>
 			<section right>
         <div class="card side-text-ready">
