--- a/site/index.html
+++ b/site/index.html
@@ -65,7 +65,7 @@
           <span id="title"><a href="javascript:void()">Smart Text Editor (STE)</a></span><br />
           <img src="../resources/share-1280.png" />
           <br />
-          <span id="content">STE is one of very few advanced web-based text editors! STE runs on Google Chrome APIs and may experience bugs on other web-platforms. To use STE, click <a href="./index.html">here</a> to go to the online editor. From there you can install it to your desktop as a Chrome web-app, or continue to use it online! We are constantly making changes and updating to use the latest APIs available, some of these are located in <a href="chrome://flags">Chrome Flags</a>.</span>
+          <span id="content">STE is one of very few advanced web-based text editors! STE runs on Google Chrome APIs and may experience bugs on other web-platforms. To use STE, click <a href="https://offroaders123.github.io/Smart-Text-Editor">here</a> to go to the online editor. From there you can install it to your desktop as a Chrome web-app, or continue to use it online! We are constantly making changes and updating to use the latest APIs available, some of these are located in <a href="chrome://flags">Chrome Flags</a>.</span>
         </div>
         <div class="side-text">The code ready text editor that requires only a browser and a keyboard!</div>
       </section>
@@ -81,7 +81,7 @@
 
           <img src="../resources/share-1280.png" /><br />
 
-          <span id="content">STE is one of very few advanced web-based text editors! STE runs on Google Chrome APIs and may experience bugs on other web-platforms. To use STE, click <a href="./index.html">here</a> to go to the online editor. From there you can install it to your desktop as a Chrome web-app, or continue to use it online! We are constantly making changes and updating to use the latest APIs available, some of these are located in <a href="chrome://flags">Chrome Flags</a>.</span>
+          <span id="content">STE is one of very few advanced web-based text editors! STE runs on Google Chrome APIs and may experience bugs on other web-platforms. To use STE, click <a href="https://offroaders123.github.io/Smart-Text-Editor">here</a> to go to the online editor. From there you can install it to your desktop as a Chrome web-app, or continue to use it online! We are constantly making changes and updating to use the latest APIs available, some of these are located in <a href="chrome://flags">Chrome Flags</a>.</span>
         </div>
 
         <div class="side-text">The code ready text editor that requires only a browser and a keyboard!</div>
